<resources>
    <string name="app_name">AppTurmas</string>
    <string name="menu_main_turmas">Turmas</string>
    <string name="menu_main_alunos">Alunos</string>
    <string name="main_activity_tvTurmasAtivas_text">Turmas ativas: %d/%d</string>
    <string name="turma_edicao_tvTurma_id_hint">ID da Turma</string>
    <string name="turma_edicao_etNome_hint">Nome da Turma</string>
    <string name="turma_edicao_tvSala_hint">Nº da Sala</string>
    <string name="turma_edicao_swAtiva_text">Ativa</string>
    <string name="turma_edicao_btSalvar_text">Salvar Turma</string>
    <string name="turma_edicao_confirma_exclusao">Você confirma a exclusão da Turma \'%s\' ?</string>
    <string name="dialogo_atencao">Atenção!</string>
    <string name="dialogo_atencao_sim">Sim</string>
    <string name="dialogo_atencao_cancelar">Cancelar</string>
    <string name="main_activity_tvAlunosCadastrados_text">Alunos cadastrados: %d</string>
    <string name="aluno_edicao_confirma_exclusao">Você confirma a exclusão do Aluno \'%s\' ?</string>
    <string name="aluno_edicao_tvAluno_id_hint">ID do Aluno</string>
    <string name="aluno_edicao_etNome_hint">Nome do Aluno</string>
    <string name="aluno_edicao_tvCpf_hint">CPF</string>
    <string name="aluno_edicao_tvDataNascimento_hint">Data de Nascimento</string>
    <string name="aluno_edicao_btSalvar_text">Salvar Aluno</string>
    <string name="aluno_edicao_valida_nome">Você deve informar o nome da aluno!</string>
    <string name="aluno_edicao_valida_cpf">Você deve informar um CPF válido para o aluno!</string>
    <string name="aluno_edicao_valida_data_nascimento">Você deve informar uma Data válida para a Data de Nascimento do aluno!</string>
    <string name="layout_turma_btIncricoes">Inscrições</string>
    <string name="incricoes_btIncluirAluno_text">Inscrever</string>
    <string name="inscricoes_tvTurmaNome_hint">Nome da Turma</string>


</resources>
